--- a/config
+++ b/config
@@ -109,7 +109,7 @@ bindsym XF86AudioMute exec --no-startup-id /home/v/.config/i3/i3wm_config/volume
 # bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
 # bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
 bindsym XF86MonBrightnessUp exec "light -A 5; notify-send 'brightness up'" 
-bindsym XF86MonBrightnessDown exec "light -U 5; notify-send 'brightness up'" 
+bindsym XF86MonBrightnessDown exec "light -U 5; notify-send 'brightness down'" 
 # setup basic defaults
 exec --no-startup-id /home/v/.config/i3/setup.sh
 
